# Advent-of-Code

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
.github/workflows/: test.yml
.template/: main.cpp
.template/.day/: day##.cpp  day##.h  main.cpp  test.cpp
src/: day.cpp  day.h
src/2023/: main.cpp
src/2023/day09/: day09.cpp  day09.h  main.cpp  test.cpp
src/2024/: main.cpp
src/2024/day01/: day01.cpp  day01.h  main.cpp  test.cpp
src/2024/day02/: day02.cpp  day02.h  main.cpp  test.cpp
src/2024/day03/: day03.cpp  day03.h  main.cpp  test.cpp
src/2024/day04/: day04.cpp  day04.h  main.cpp  test.cpp
